service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapp-service
spec:
  selector:
    app: fastapp
  ports:
    - protocol: TCP
      port: 80        # Service port
      targetPort: 9000 # Container's port inside the pod
      nodePort: 32000 
  type: NodePort
